--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-vector-drawable:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
     //view注解
     //retrofit rxjava rxcache
@@ -70,4 +71,5 @@ dependencies {
     //BottomNavigation
     //android快速开发框架--快速实现 异常奔溃统一管理 页面 加载中 加载失败 无数据等状态以及下拉刷新和自动加载
     compile project(':lcrapiddeveloplibrary')
+    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
 }
