1.周五日常保存代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name="com.don.onews.ui.home.activity.NewsBrowserActivity"/>
+        <activity android:name="com.don.onews.ui.webview.WebViewBrowserActivity"/>
     </application>
 
 
