--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'com.android.support:cardview-v7:25.2.0'
-
     //retrofit rxjava rxcache
     compile 'io.reactivex:rxjava:1.1.8'
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -57,16 +56,22 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     compile 'com.github.VictorAlbertos.RxCache:core:1.4.6'
-
-    apt 'com.jakewharton:butterknife-compiler:8.4.0' //view注解
-    compile 'com.jakewharton:butterknife:8.4.0'//view注解
-
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    //view注解
+    compile 'com.jakewharton:butterknife:8.4.0'
+    //view注解
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.orhanobut:logger:1.13' //打印日志
-    compile 'com.blankj:utilcode:1.3.6' //工具类
-    compile 'com.android.support:multidex:1.0.0' //分包
-    compile 'com.github.armcha:LuseenBottomNavigation:1.8.2'  //BottomNavigation
+    compile 'com.orhanobut:logger:1.13'
+    //打印日志
+    compile 'com.blankj:utilcode:1.3.6'
+    //工具类
+    compile 'com.android.support:multidex:1.0.0'
+    //分包
+    compile 'com.github.armcha:LuseenBottomNavigation:1.8.2'
+    //BottomNavigation
     //android快速开发框架--快速实现 异常奔溃统一管理 页面 加载中 加载失败 无数据等状态以及下拉刷新和自动加载
     compile project(':lcrapiddeveloplibrary')
-    compile 'com.tencent.bugly:crashreport:latest.release' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
+    compile files('libs/Baidu_MobAds_SDK.jar')
 }
